<resources>
    <string name="app_name">Master Cookbook</string>
    <string name="privacy_notice_and_terms_of_use">By using Master Cookbook, you agree to our Privacy Notice and Terms of Use</string>
    <string name="log_in_text">Already have an account? Log In</string>
    <string name="sign_up_email_text">Sign up with an email</string>
    <string name="google_text">Google</string>
    <string name="skip_button">Skip</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up_main">Sign Up</string>
    <string name="display_name_signup">Display Name</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">Password</string>
    <string name="confirm_password_signup">Confirm Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login_button">Login</string>
    <string name="login_main">Login</string>
    <string name="display_name_error_message">Display name must be at least of size 2</string>
    <string name="email_error_message">Email is invalid</string>
    <string name="password_error_message">password must be at least of size 6</string>
    <string name="confirm_password_error_message">passwords do not match</string>
    <string name="progress_bar_dialog_text">Loading</string>
    <string name="skip_dialog_message">You won’t have access to most features if you don’t login</string>
    <string name="google_choose_account_error">Failed to login using google</string>
    <string name="dialog_on_confirm_default">Confirm</string>
    <string name="dialog_on_cancel_default">Cancel</string>
    <string name="splash_retry_dialog">Something went wrong while getting your data, Try again?</string>
    <string name="splash_dialog_on_confirm">Retry</string>
    <string name="splash_dialog_on_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_plan">Plan</string>
    <string name="daily_inspirations_text">Daily Inspirations</string>
    <string name="check_ingredients_text">Check Ingredients!</string>
    <string name="countries_text">Countries</string>
    <string name="ingredients_text">Ingredients</string>
    <string name="categories_text">Categories</string>
    <string name="more_you_might_like_text">More you might like</string>
    <string name="search_by_text">Search By:</string>
    <string name="search_by_category_text">Category</string>
    <string name="search_by_country_text">Country</string>
    <string name="search_by_ingredient_text">Ingredient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_plan_content_description">Add To Plan</string>
    <string name="add_to_favorite_content_description">Add to favorite</string>
    <string name="meal_ingredients_text">Ingredients:</string>
    <string name="instructions_meal_text">Instructions:</string>
    <string name="meal_fragment">Meal</string>
    <string name="search_by_meal_text">Meal</string>
    <string name="search_detailed_no_match">There is no meal with that name</string>
    <string name="search_detailed_fragment">""</string>
    <string name="search_detailed_meal_hint">"Meal"</string>
    <string name="search_detailed_category_hint">"Category"</string>
    <string name="search_detailed_ingredient_hint">"Ingredient"</string>
    <string name="search_detailed_country_hint">"Country"</string>
    <string name="favorite_list_empty_text">You haven\'t added any meals to your favorites.</string>
    <string name="favorite_delete_confirm_text">Delete</string>
    <string name="favorite_delete_cancel_text">Cancel</string>
    <string name="favorite_delete_message">Are you sure you want to delete\u0020</string>
    <string name="sater_day_name">Saterday:</string>
    <string name="sun_day_name">Sunday:</string>
    <string name="mon_day_name">Monday:</string>
    <string name="tues_day_name">Tuesday:</string>
    <string name="wednes_day_name">Wednesday:</string>
    <string name="thurs_day_name">Thursday:</string>
    <string name="fri_day_name">Friday:</string>
    <string name="plan_delete_error_message">Something went wrong, Please try again</string>
    <string name="plan_delete_success_message">Plan Deleted Successfully</string>
    <string name="plan_date_picker_confirm_text">Add Plan</string>
    <string name="plan_date_content_text">Choose days to add meal to</string>
    <string name="saterday_chip">Saterday</string>
    <string name="sunday_chip">Sunday</string>
    <string name="monday_chip">Monday</string>
    <string name="tuesday_chip">Tuesday</string>
    <string name="wednesday_chip">Wednesday</string>
    <string name="thursday_chip">Thursday</string>
    <string name="friday_chip">Friday</string>
    <string name="country_image">Country Image</string>
    <string name="disconnected_text">You are not connected</string>
    <string name="meals_fragment">Meals</string>
    <string name="added_successfully_toast_text">Added Successfully</string>
    <string name="deleted_successfully_toast_text">Deleted Successfully</string>
    <string name="permission_denied">You must be looged in to use other features</string>
    <string name="sign_out">Sign Out</string>
</resources>