<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:fillViewport="true"
    tools:context=".signup.SignupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_ic" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_toolbar" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_view_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/sign_up_main"
                android:textColor="@color/on_secondary"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/displayNameSignupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/display_name_signup"
                android:textColorHint="#80FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailSignupEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email_signup"
                android:inputType="textEmailAddress"
                android:textColorHint="#80FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/displayNameSignupText"
                app:layout_constraintStart_toStartOf="@+id/displayNameSignupText"
                app:layout_constraintTop_toBottomOf="@+id/displayNameSignupText" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignupEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password_signup"
                android:inputType="textPassword"
                android:textColorHint="#80FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/emailSignupEditText"
                app:layout_constraintStart_toStartOf="@+id/emailSignupEditText"
                app:layout_constraintTop_toBottomOf="@+id/emailSignupEditText" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordSignupEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_password_signup"
                android:inputType="textPassword"
                android:textColorHint="#80FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/passwordSignupEditText"
                app:layout_constraintStart_toStartOf="@+id/passwordSignupEditText"
                app:layout_constraintTop_toBottomOf="@+id/passwordSignupEditText" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#1AFFFFFF"
                android:text="@string/signup_button"
                android:textColor="@color/secondary"
                app:layout_constraintEnd_toEndOf="@+id/confirmPasswordSignupEditText"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/confirmPasswordSignupEditText"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordSignupEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>